# Matsu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/: distribution.sh  matsu-606.sfz  matsuri-606.sfz
source/: 606-hat-closed.cpp  606-hat-open.cpp  606-hats.cpp  606-kick.cpp  606-snare.cpp  606-tom-high.cpp  606-tom-low.cpp  606-toms.cpp  analyser-resources.hpp  analyser.cpp  matsu.cpp  matsu.hpp  matsuri.cpp  matsuri.hpp  resources.hpp
source/research/: resonant-hats.cpp
